<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" ><![CDATA[



    />





    ]]>

    <ImageView
        android:id="@+id/dialog_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" CLOSE "
        android:layout_below="@+id/dialog_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />

</RelativeLayout>