...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="60dp"
                android:id="@+id/relativeLayout"
                android:orientation="horizontal"
                android:gravity="bottom|center_horizontal">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_stop_white"
                    android:visibility="gone"
                    android:layout_margin="10dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/snapshot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera"
                    android:visibility="gone"
                    android:layout_margin="10dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_media_play"
                     />

            </LinearLayout>
...
