...
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="Home" />
        <item
            android:id="@+id/connection_settings"
            android:icon="@drawable/ic_connection_settings"
            android:title="Connection Settings" />
        <item
            android:id="@+id/media_settings"
...
            android:id="@+id/security_settings"
            android:icon="@drawable/ic_security_settings"
            android:title="Security Settings" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
    </group>

    <item android:title="Info">
        <menu>
            <item
                android:id="@+id/about"
...
